kube/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps
  namespace: default
spec:
  tls:
    - hosts:
      - grafana.wgraham.io
      secretName: wildcard-tls
  ingressClassName: traefik
  rules:
    - host: grafana.wgraham.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-grafana
                port:
                  number: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps
  namespace: argocd
spec:
  tls:
    - hosts:
      - argocd.wgraham.io
      secretName: wildcard-tls
  ingressClassName: traefik
  rules:
    - host: argocd.wgraham.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 4430

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps
  namespace: vault
spec:
  ingressClassName: traefik
  rules:
    - host: vault.wgraham.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vault
                port:
                  number: 8200

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps
  namespace: logging
spec:
  ingressClassName: traefik
  tls:
    - hosts:
      - kibana.wgraham.io
      secretName: wildcard-tls
  rules:
    - host: kibana.wgraham.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kibana-kb-http
                port:
                  number: 5601
